# autops-demo

./: .gitignore  IMPLEMENTATION_STATUS.md  PROGRESS.md  README.md  SETUP.md  TESTING.md  VISUALIZATION_TASK.md  app.py  dockerfile  pyproject.toml  run_ingestion.py  run_satellite_api.py
.cursor/plans/: orbital_toolkit_integration_ebeb2602.plan.md
.github/workflows/: convert-toon.yml
agent/: __init__.py  coala_action_space.py  coala_reasoning_engine.py  llm_interface.py  reasoning_engine.py
agent/api/: main.py
agent/data_pipeline/: config.py  ingestion.py  models.py
agent/memory/: __init__.py  base_memory.py  episodic_memory.py  procedural_memory.py  semantic_memory.py  working_memory.py
data/: managed_satellites.toon
data/memory/: .gitkeep  episodic_memory.json  episodic_memory.toon  procedural_memory.json  procedural_memory.toon  semantic_memory.json  semantic_memory.toon  (+1 more)
migrations/: 001_init_schema.sql  002_managed_satellites.sql
simulation/: orekit_simulator.py
templates/: index.html
tests/: __init__.py  test_api.py  test_flask_api.py  test_highfidelity_tools.py  test_ingestion.py  test_keeptrack_client.py  test_llm_integration.py  test_managed_satellites.py  test_orekit_setup.py  test_reasoning_engine.py
tools/: __init__.py  base_tool.py  data_fusion_tool.py  image_processing_tool.py  managed_satellite_tool.py  object_detection_tool.py  orekit_propagation_tool.py  region_mapper_tool.py  satellite_data_tool.py  tool_loader.py  tools_metadata.json  tools_metadata.toon
utils/: clear_memory.py  convert_metadata.py  toon_formatter.py
(+2 files in other folders)
