[project]
name = "autops-demo"
version = "0.1.0"
description = "Autonomous Satellite Operations Assistant with AI-powered reasoning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "openai",
    "ollama",
    "requests",
    "numpy",
    "geopy",
    "aiohttp",
    "toon-format",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "tools", "simulation"]

[tool.uv.sources]
toon-format = { git = "https://github.com/toon-format/toon-python.git" }

